manifests/o11y/metrics/prometheus-test.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-test
  namespace: bookinfo
  labels:
    app: prometheus-test
spec:
  selector:
    app: prometheus-test
  ports:
  - name: web
    port: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: prometheus-test
  namespace: bookinfo
  labels:
    app: prometheus-test
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: prometheus-test
      mountPath: /etc/nginx
      readOnly: true
  volumes:
  - name: prometheus-test
    configMap:
      name: prometheus-test
